switch backendUrl in prod.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "replace-in-file": "^6.3.2",
     "rowdy-logger": "^1.0.2"
   },
   "scripts": {
