--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "name": "unit2project",
   "description": "An app to tell the user what to pack when they're about to go to a different city, based on the upcoming weather. The database will store the user's saved pack lists.",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.18.1"
+  },
   "main": "server.js",
   "repository": {
     "type": "git",
